vlib/v/checker/tests/array_filter_fn_err_b.out
vlib/v/checker/tests/array_filter_fn_err_b.vv:5:24: error: type mismatch, should use `fn(a int) bool {...}`
    3 | }
    4 | fn main() {
    5 |     a := [1,2,3,4].filter(fil)
      |                           ~~~
    6 |     println(a)
    7 | }