vlib/v/checker/tests/array_filter_fn_err_b.vv
fn fil(a string) bool {
	return a.len > 0
}
fn main() {
	a := [1,2,3,4].filter(fil)
	println(a)
}
